--- a/app/src/main/res/layout/activity_loan_request.xml
+++ b/app/src/main/res/layout/activity_loan_request.xml
@@ -38,6 +38,20 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/loanRequestOkBtn"
+            android:text="ok"
+            android:textSize="15sp"
+            android:layout_margin="10dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:visibility="invisible"
+            android:enabled="false"/>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:id="@+id/applyLoanBtn"
             android:text="apply loan"
             android:textSize="15sp"
