--- a/app/src/main/res/layout/layout_loan_details.xml
+++ b/app/src/main/res/layout/layout_loan_details.xml
@@ -19,6 +19,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:id="@+id/loanDetailsIdValueLinLay"
                 android:orientation="vertical"
                 android:elevation="2dp"
                 android:background="@color/white"
@@ -27,7 +28,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Уникальный номер займа"
+                    android:text="Уникальный номер заёма"
                     android:textSize="20sp"
                     android:gravity="start"
                     android:layout_marginTop="10dp"
@@ -59,7 +60,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Сумма займа"
+                    android:text="Сумма заёма"
                     android:textSize="20sp"
                     android:gravity="start"
                     android:layout_marginTop="10dp"
@@ -91,7 +92,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Срок займа"
+                    android:text="Срок заёма"
                     android:textSize="20sp"
                     android:gravity="start"
                     android:layout_marginTop="10dp"
@@ -243,6 +244,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:id="@+id/loanDetailsDateTimeValueLinLay"
                 android:orientation="vertical"
                 android:elevation="2dp"
                 android:background="@color/white"
@@ -275,6 +277,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:id="@+id/loanDetailsStateValueLinLay"
                 android:orientation="vertical"
                 android:elevation="2dp"
                 android:background="@color/white"
