--- a/app/src/main/res/layout/loans_list_item.xml
+++ b/app/src/main/res/layout/loans_list_item.xml
@@ -2,12 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:id="@+id/loanItemParentConLay"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/id_loan_item_icon"
+        android:src="@drawable/ic_loan_item_icon"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="48dp"
         android:layout_marginLeft="16dp"
@@ -23,8 +24,8 @@
         android:textSize="16sp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="60dp"
-        android:layout_marginLeft="90dp"
-        android:layout_marginRight="150dp"
+        android:layout_marginLeft="65dp"
+        android:layout_marginRight="170dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,11 +36,11 @@
         android:layout_height="wrap_content"
         android:id="@+id/loanItemLoanStateTxt"
         android:text="Одобрен"
-        android:textSize="20sp"
-        android:layout_marginTop="70dp"
+        android:textSize="18sp"
+        android:layout_marginTop="80dp"
         android:layout_marginBottom="40dp"
-        android:layout_marginLeft="90dp"
-        android:layout_marginRight="150dp"
+        android:layout_marginLeft="65dp"
+        android:layout_marginRight="170dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,7 +52,7 @@
         android:id="@+id/loanItemLoanAmountTxt"
         android:text="+ 15000 Р"
         android:textSize="20sp"
-        android:layout_marginLeft="270dp"
+        android:layout_marginLeft="220dp"
         android:layout_marginRight="16dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
