Fixed issues with fragments navigation, added saving loan conditions and personal data process

--- a/app/src/main/res/layout/activity_loan_request_instruction.xml
+++ b/app/src/main/res/layout/activity_loan_request_instruction.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.instruction.LoanRequestInstructionActivity">
+    tools:context=".ui.instruction.LoanRequestInstructionActivity"
+    android:background="@drawable/purple_gradient_background">
 
     <androidx.viewpager2.widget.ViewPager2
         android:layout_width="match_parent"
@@ -28,6 +29,8 @@
             android:layout_height="wrap_content"
             android:id="@+id/prevInstructionItemBtn"
             android:text="Назад"
+            android:textColor="@drawable/transparent_button_white_text_selector"
+            android:background="@android:color/transparent"
             android:layout_marginBottom="16dp"
             android:layout_marginLeft="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -40,6 +43,8 @@
             android:layout_height="wrap_content"
             android:id="@+id/nextInstructionItemBtn"
             android:text="Далее"
+            android:textColor="@drawable/transparent_button_white_text_selector"
+            android:background="@android:color/transparent"
             android:layout_marginBottom="16dp"
             android:layout_marginRight="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -50,6 +55,8 @@
             android:layout_height="wrap_content"
             android:id="@+id/finishInstructionsBtn"
             android:text="Закрыть"
+            android:textColor="@drawable/transparent_button_white_text_selector"
+            android:background="@android:color/transparent"
             android:layout_marginBottom="16dp"
             android:layout_marginRight="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
