--- a/app/src/main/res/layout/fragment_loan_request_success.xml
+++ b/app/src/main/res/layout/fragment_loan_request_success.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.LoanRequestSuccessFragment">
+    tools:context=".ui.LoanRequestSuccessFragment"
+    android:background="@drawable/purple_gradient_background">
 
     <LinearLayout
         android:layout_width="match_parent"
