--- a/app/src/main/res/layout/layout_get_loan_info.xml
+++ b/app/src/main/res/layout/layout_get_loan_info.xml
@@ -1,27 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="30dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.instruction.InstructionFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        app:cardBackgroundColor="@color/red_light"
         app:cardCornerRadius="20dp"
-        android:background="@color/white"
+        android:layout_marginTop="40dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/instructionsFragmentTxt"
-            android:textSize="60dp"/>
+            android:layout_margin="25dp"
+            android:text="Оформили заём, но не знаете, как получить деньги?"
+            android:textSize="30sp"
+            android:gravity="center"/>
 
     </androidx.cardview.widget.CardView>
 
