--- a/app/src/main/res/layout/activity_loan.xml
+++ b/app/src/main/res/layout/activity_loan.xml
@@ -13,26 +13,33 @@
         android:layout_gravity="center"
         android:alpha="0"/>
 
-    <FrameLayout
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/loanActivityContainer"
-        android:paddingBottom="50dp"/>
+        android:id="@+id/refreshLoanDetailsLayout">
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="40dp"
-        android:elevation="5dp"
-        android:id="@+id/loanDetailsBottomSheet"
-        android:background="@drawable/bottom_sheet_layout_shape"
-        app:behavior_hideable="false"
-        app:behavior_peekHeight="50dp"
-        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/loanActivityContainer"
+            android:paddingBottom="50dp"/>
 
-        <include
-            layout="@layout/layout_get_loan_info"/>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
-    </FrameLayout>
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="40dp"
+            android:elevation="5dp"
+            android:id="@+id/loanDetailsBottomSheet"
+            android:background="@drawable/bottom_sheet_layout_shape"
+            app:behavior_hideable="false"
+            app:behavior_peekHeight="50dp"
+            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
+
+            <include
+                layout="@layout/layout_get_loan_info"/>
+
+        </FrameLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
