--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -11,38 +11,53 @@
         android:layout_height="wrap_content"
         android:id="@+id/loginLinLay"
         android:orientation="vertical"
+        android:layout_marginTop="80dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/AuthorizationActivityStyle.Icon">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                style="@style/AuthorizationActivityStyle.Icon"/>
+
+        </androidx.cardview.widget.CardView>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:text="Login"
-            android:textSize="30sp"/>
+            style="@style/AuthorizationActivityStyle.Title"
+            android:layout_margin="20dp"/>
 
         <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:id="@+id/loginNameEdtTxt"
-            android:maxLines="1"
-            android:hint="Name"
-            android:layout_margin="20dp"/>
-
-        <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:hint="Name"
+            android:inputType="text"
+            style="@style/CommonEditText"/>
+
+        <EditText
             android:id="@+id/loginPasswordEdtTxt"
-            android:maxLines="1"
-            android:hint="Password"
-            android:layout_margin="20dp"/>
+            style="@style/CommonEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:layout_margin="20dp"
+            android:hint="Password" />
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/loginBtn"
+            style="@style/CommonPurpleButton"
             android:text="sign in"
             android:layout_margin="20dp"/>
 
@@ -50,6 +65,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/createAccountBtn"
+            style="@style/CommonWhiteButton"
             android:text="create account"
             android:layout_margin="20dp"/>
 
