--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -11,53 +11,68 @@
         android:layout_height="wrap_content"
         android:id="@+id/registrationLinLay"
         android:orientation="vertical"
+        android:layout_marginTop="80dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/AuthorizationActivityStyle.Icon">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            style="@style/AuthorizationActivityStyle.Icon"/>
+
+        </androidx.cardview.widget.CardView>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:text="Registration"
-            android:textSize="30sp"/>
+            style="@style/AuthorizationActivityStyle.Title"
+            android:layout_margin="20dp"/>
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/registrationNameEdtTxt"
-            android:maxLines="1"
             android:hint="Name"
-            android:layout_margin="20dp"/>
+            android:layout_margin="20dp"
+            android:inputType="text"
+            style="@style/CommonEditText"/>
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/registrationPasswordEdtTxt"
-            android:maxLines="1"
             android:hint="Password"
-            android:layout_margin="20dp"/>
+            android:inputType="textPassword"
+            android:layout_margin="20dp"
+            style="@style/CommonEditText"/>
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/registrationBtn"
             android:text="sign up"
+            style="@style/CommonPurpleButton"
             android:layout_margin="20dp"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Уже зарегестрированы?"
-            android:textSize="20sp"
-            android:gravity="center"/>
+            style="@style/AuthorizationActivityStyle.Text"/>
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/openLoginFragmentBtn"
             android:text="Авторизоваться"
+            style="@style/CommonWhiteButton"
             android:layout_margin="20dp"/>
 
     </LinearLayout>
